--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -36,7 +36,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: ${{ inputs.env || 'development' }}
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
@@ -66,7 +66,7 @@ jobs:
         run: terraform --version
 
       - name: Initialize remote backend
-        run: terraform init -backend-config="bucket=$ENV_VAR-arxiv-terraform-state"
+        run: terraform init -backend-config="bucket=${{ vars.ENV_VAR }}-arxiv-terraform-state"
         working-directory: "terraform/${{ inputs.function_name }}"
 
       - name: Format check
@@ -74,5 +74,5 @@ jobs:
         working-directory: "terraform/${{ inputs.function_name }}"
 
       - name: Apply
-        run: terraform apply -var-file=envs/$ENV_VAR.tfvars -var="commit_sha=$COMMIT_SHA_TO_DEPLOY" -auto-approve
+        run: terraform apply -var-file=envs/${{ vars.ENV_VAR }}.tfvars -var="commit_sha=$COMMIT_SHA_TO_DEPLOY" -auto-approve
         working-directory: "terraform/${{ inputs.function_name }}"
