--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -36,7 +36,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: ${{ inputs.env || 'development' }}
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
