Bugfix function workflows (#95)
* restructure workflows

* update variable references

* update requests trigger

* revert to deterministic deployment pipeline

* rename to avoid merge conflicts

* temporary reorg

* cleanup

* update triggers

* push to test

* update global env var reference

* uncomment

--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -1,5 +1,4 @@
 name: Aggregate hourly downloads triggers
-run-name: "Aggregate Hourly Downloads ${{ github.ref_name }} ${{ github.sha }}"
 
 on:
   push:
@@ -8,23 +7,15 @@ on:
     paths:
       - "stats-functions/aggregate_hourly_downloads/**"
       - "terraform/aggregate_hourly_downloads/**"
+      - ".github/workflows/deploy-function.yml"
   pull_request:
     branches:
       - main
     paths:
       - "stats-functions/aggregate_hourly_downloads/**"
       - "terraform/aggregate_hourly_downloads/**"
-  workflow_dispatch:
-    inputs:
-      environment:
-        type: environment
-        description: Select the environment
-
-permissions:
-  id-token: write
-  actions: write
-  contents: read      
-
+      - ".github/workflows/lint-test-function.yml"
+      
 jobs:
   call-lint-test:
     name: Lint and Test
@@ -32,21 +23,8 @@ jobs:
     with:
       function_name: aggregate_hourly_downloads
 
-  deployment-routing:
-      needs: call-lint-test
-      runs-on: ubuntu-latest
-  
-      concurrency:
-        group: deploy-${{ github.workflow }}-${{ github.ref }}
-        cancel-in-progress: true
-  
-      steps:
-        - name: Deployment Routing
-          uses: arXiv/iac-public/.github/actions/service-deployment-routing@main
-          with:
-            image_tag: ${{ github.sha }}
-            deploy_workflow: deploy-function.yml
-            function_name: aggregate_hourly_downloads
-            function_name_env: ${{ inputs.environment }}
-            workload_identity_provider: ${{ vars.ARXIV_DEVELOPMENT_PROVIDER_NAME }}
-            service_account: ${{ vars.ARXIV_DEVELOPMENT_SERVICE_ACCOUNT }}      
+  call-deploy:
+    name: Deploy
+    uses: ./.github/workflows/deploy-function.yml
+    with:
+      function_name: aggregate_hourly_downloads
