--- a/.github/workflows/lint-and-test-api.yml
+++ b/.github/workflows/lint-and-test-api.yml
@@ -1,12 +1,18 @@
-name: Lint and test stats-api
+name: Lint and test Python services
 
 on:
-  pull_request:
-    branches:
-      - main
-    paths:
-      - "stats-api/**"
+  workflow_call:
+    inputs:
+      service_name:
+        type: string
+        description: The name of the service directory (e.g. stats_api)
+        required: true
   workflow_dispatch:
+    inputs:
+      service_name:
+        type: string
+        description: Name of the service directory (e.g. stats_api)
+        required: true
 
 permissions:
   contents: read
