--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment || "development" }}
-    if: github.ref == "refs/heads/main"
+    # only deploy if merged to main
+    # if: github.ref == "refs/heads/main"
 
     steps:
       - name: Checkout code
