--- a/.github/workflows/stats-api-triggers.yml
+++ b/.github/workflows/stats-api-triggers.yml
@@ -15,7 +15,7 @@ on:
     paths:
       - "stats-api/stats_api/**"
       - "terraform/stats_api/**"
-      - ".github/workflows/lint-test-python.yml"
+      - ".github/workflows/lint-test-api.yml"
       - ".github/workflows/build-push-api.yml"
   workflow_dispatch:
     inputs:
@@ -35,9 +35,7 @@ on:
 jobs:
   call-lint-test:
     name: Stats API ${{ github.ref_name }} ${{ github.sha }}
-    uses: ./.github/workflows/lint-test-python.yml
-    with:
-      service_name: stats_api
+    uses: ./.github/workflows/lint-test-api.yml
 
   call-build-push:
     if: ${{ inputs.jobs_to_run == "build and push" || inputs.jobs_to_run == "build, push, deploy" }}
@@ -45,10 +43,10 @@ jobs:
     uses: ./.github/workflows/build-push-api.yml
     with:
       service_name: stats_api
-      dockerfile: "Dockerfile.api"
-      image_name: "stats-api"
+      dockerfile: Dockerfile.api
+      image_name: stats-api
       port: "8080"
-      target: "runtime"
+      target: runtime
       commit_sha: ${{ inputs.commit_sha || github.sha }}
 
   call-deploy:
