add pr conditions to trigger on commit

--- a/.github/workflows/stats-api-triggers.yml
+++ b/.github/workflows/stats-api-triggers.yml
@@ -10,6 +10,7 @@ on:
       - ".github/workflows/deploy.yml"
       - ".github/workflows/build-push-api.yml"
   pull_request:
+    types: [opened, synchronize, reopened]
     branches:
       - main
     paths:
