--- a/.github/workflows/stats-api-triggers.yml
+++ b/.github/workflows/stats-api-triggers.yml
@@ -7,10 +7,10 @@ on:
     paths:
       - "stats-api/stats_api/**"
       - "terraform/stats_api/**"
-      - ".github/workflows/deploy.yml"
+      - ".github/workflows/lint-test-api.yml"
       - ".github/workflows/build-push-api.yml"
+      - ".github/workflows/deploy.yml"
   pull_request:
-    types: [opened, synchronize, reopened]
     branches:
       - main
     paths:
@@ -18,6 +18,7 @@ on:
       - "terraform/stats_api/**"
       - ".github/workflows/lint-test-api.yml"
       - ".github/workflows/build-push-api.yml"
+      - ".github/workflows/deploy.yml"
   workflow_dispatch:
     inputs:
       commit_sha:
@@ -35,12 +36,13 @@ on:
 
 jobs:
   call-lint-test:
-    name: Stats API ${{ github.ref_name }} ${{ github.sha }}
+    name: Lint stats api
     uses: ./.github/workflows/lint-test-api.yml
 
   call-build-push:
-    if: ${{ github.event_name != "workflow_dispatch" || inputs.jobs_to_run == "build and push" || inputs.jobs_to_run == "build, push, deploy" }}
-    name: Stats API ${{ github.ref_name }} ${{ github.sha }}
+    needs: call-lint-test
+    if: ${{ github.event_name != 'workflow_dispatch' || inputs.jobs_to_run == 'build and push' || inputs.jobs_to_run == 'build, push, deploy' }}
+    name: Build push stats api
     uses: ./.github/workflows/build-push-api.yml
     with:
       service_name: stats_api
@@ -51,8 +53,9 @@ jobs:
       commit_sha: ${{ inputs.commit_sha || github.sha }}
 
   call-deploy:
-    if: ${{ github.event_name != "workflow_dispatch" || inputs.jobs_to_run == "build, push, deploy" || inputs.jobs_to_run == "deploy only" }}
-    name: Stats API ${{ github.ref_name }} ${{ github.sha }}
+    needs: call-lint-test
+    if: ${{ github.event_name != 'workflow_dispatch' || inputs.jobs_to_run == 'build, push, deploy' || inputs.jobs_to_run == 'deploy only' }}
+    name: Deploy stats api
     uses: ./.github/workflows/deploy.yml
     with:
       service_name: stats_api
