--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment || 'development' }}
     # only deploy if merged to main
-    if: github.ref == "refs/heads/main"
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
