--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -20,7 +20,7 @@ concurrency:
   # cancel any existing unfinished jobs if this workflow is retriggered
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-  
+
 jobs:
   call-lint-test:
     name: Lint test hourly downloads
@@ -29,6 +29,7 @@ jobs:
       function_name: aggregate_hourly_downloads
 
   call-deploy:
+    needs: call-lint-test
     name: Deploy hourly downloads
     uses: ./.github/workflows/deploy-function.yml
     with:
