--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -20,7 +20,7 @@ concurrency:
   # cancel any existing unfinished jobs if this workflow is retriggered
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
-  
+
 jobs:
   call-lint-test:
     name: Lint test hourly edge requests
@@ -29,6 +29,7 @@ jobs:
       function_name: hourly_edge_requests
 
   call-deploy:
+    needs: call-lint-test
     name: Deploy hourly edge requests
     uses: ./.github/workflows/deploy-function.yml
     with:
