--- a/.github/workflows/aggregate-hourly-downloads-triggers.yml
+++ b/.github/workflows/aggregate-hourly-downloads-triggers.yml
@@ -16,6 +16,11 @@ on:
       - "terraform/aggregate_hourly_downloads/**"
       - ".github/workflows/lint-test-function.yml"
 
+concurrency:
+  # cancel any existing unfinished jobs if this workflow is retriggered
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   call-lint-test:
     name: Lint test hourly downloads
@@ -24,6 +29,7 @@ jobs:
       function_name: aggregate_hourly_downloads
 
   call-deploy:
+    needs: call-lint-test
     name: Deploy hourly downloads
     uses: ./.github/workflows/deploy-function.yml
     with:
