--- a/.github/workflows/hourly-edge-requests-triggers.yml
+++ b/.github/workflows/hourly-edge-requests-triggers.yml
@@ -16,6 +16,11 @@ on:
       - "terraform/hourly_edge_requests/**"
       - ".github/workflows/lint-test-function.yml"
 
+concurrency:
+  # cancel any existing unfinished jobs if this workflow is retriggered
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   call-lint-test:
     name: Lint test hourly edge requests
@@ -24,6 +29,7 @@ jobs:
       function_name: hourly_edge_requests
 
   call-deploy:
+    needs: call-lint-test
     name: Deploy hourly edge requests
     uses: ./.github/workflows/deploy-function.yml
     with:
