--- a/.github/workflows/monthly-submissions-triggers.yml
+++ b/.github/workflows/monthly-submissions-triggers.yml
@@ -16,6 +16,11 @@ on:
       - "terraform/monthly_submissions/**"
       - ".github/workflows/lint-test-function.yml"
 
+concurrency:
+  # cancel any existing unfinished jobs if this workflow is retriggered
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   call-lint-test:
     name: Lint test monthly submissions
@@ -24,6 +29,7 @@ jobs:
       function_name: monthly_submissions
 
   call-deploy:
+    needs: call-lint-test
     name: Deploy monthly submissions
     uses: ./.github/workflows/deploy-function.yml
     with:
