--- a/stats-api/pyproject.toml
+++ b/stats-api/pyproject.toml
@@ -7,7 +7,9 @@ dependencies = [
     "flask>=3.1.2,<4",
     "flask-cors>=6.0.1,<7",
     "flask-sqlalchemy>=3.1.1,<4",
-    "pg8000>=1.31.4,<2",
+    "pydantic>=2.12.5",
+    "pytest>=8.4.2",
+    "python-dateutil>=2.9.0.post0",
     "python-dotenv>=1.1.1,<2",
     "stats-entities",
 ]
