--- a/.github/workflows/lint-test-api.yml
+++ b/.github/workflows/lint-test-api.yml
@@ -30,5 +30,9 @@ jobs:
         run: |
           uv run --directory stats-api ruff check --output-format=github .
 
+      - name: Type check
+        run: |
+          uv run --directory stats-api ty check --output-format=github .
+
       - name: Run tests
         run: uv run --directory stats-api pytest tests
