--- a/stats-api/pyproject.toml
+++ b/stats-api/pyproject.toml
@@ -7,8 +7,11 @@ dependencies = [
     "flask>=3.1.2,<4",
     "flask-cors>=6.0.1,<7",
     "flask-sqlalchemy>=3.1.1,<4",
-    "pg8000>=1.31.4,<2",
-    "python-dotenv>=1.1.1,<2",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "pymysql[rsa]>=1.1.2",
+    "pytest>=8.4.2",
+    "python-dateutil>=2.9.0.post0",
     "stats-entities",
 ]
 
@@ -16,6 +19,7 @@ dependencies = [
 dev = [
     "pytest>=8.4.2,<9",
     "ruff>=0.13.0,<0.14",
+    "ty>=0.0.4",
 ]
 
 [tool.uv]
