--- a/stats-functions/pyproject.toml
+++ b/stats-functions/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "cloud-sql-python-connector[pymysql]>=1.20.0",
     "google-cloud-logging>=3.13.0",
     "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
     "sqlalchemy>=2.0.46",
 ]
 
