--- a/stats-functions/monthly_downloads/src/requirements.txt
+++ b/stats-functions/monthly_downloads/src/requirements.txt
@@ -5,4 +5,4 @@ cloud-sql-python-connector[pymysql] >=1.18.4
 stats-entities @ git+https://github.com/arXiv/stats.git@main#egg=stats_entities&subdirectory=stats-entities
 fastly==12.*
 pydantic==2.*
-stats-functions @ git+https://github.com/arXiv/stats.git@ARXIVCE-4168-refactor-functions#egg=stats_functions&subdirectory=stats-functions
+stats-functions @ git+https://github.com/arXiv/stats.git@main#egg=stats_functions&subdirectory=stats-functions
