--- a/stats-functions/monthly_submissions/src/requirements.txt
+++ b/stats-functions/monthly_submissions/src/requirements.txt
@@ -5,3 +5,4 @@ cloud-sql-python-connector[pymysql] >=1.18.4
 stats-entities @ git+https://github.com/arXiv/stats.git@main#egg=stats_entities&subdirectory=stats-entities
 fastly==12.*
 pydantic==2.*
+stats-functions @ git+https://github.com/arXiv/stats.git@main#egg=stats_functions&subdirectory=stats-functions
