--- a/stats-functions/pyproject.toml
+++ b/stats-functions/pyproject.toml
@@ -24,8 +24,12 @@ dev = [
 [tool.uv]
 default-groups = ["dev"]
 
+[tool.hatch.build.targets.wheel]
+packages = ["stats_functions"]
+
 [tool.hatch.build.targets.sdist]
-include = ["/stats_functions"]
+include = ["/stats_functions", "/tests", "pyproject.toml", "README.md"]
+exclude = ["/aggregate_hourly_downloads", "/hourly_edge_requests", "/monthly_submissions", "/monthly_downloads"]
 
 [build-system]
 requires = ["hatchling"]
