--- a/stats-functions/aggregate_hourly_downloads/src/requirements.txt
+++ b/stats-functions/aggregate_hourly_downloads/src/requirements.txt
@@ -1,7 +1,8 @@
 functions-framework==3.*
-arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@25952ff7b63ca3a36ac8f947137f16b44c6c8fce#egg=arxiv_base
+arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@a1fed38fcae2d8630acc9aa8b53c2f4a1776f5c5#egg=arxiv_base
 google-cloud-logging
 google-cloud-bigquery
 sqlalchemy>=2.0.26
 cloud-sql-python-connector[pymysql] >=1.18.4
-stats-entities @ git+https://github.com/arXiv/stats.git@main#egg=stats_entities&subdirectory=stats-entities
+stats-entities @ git+https://github.com/arXiv/stats.git@main#subdirectory=stats-entities
+stats-functions @ git+https://github.com/arXiv/stats.git@main#subdirectory=stats-functions
