--- a/.github/workflows/lint-test-function.yml
+++ b/.github/workflows/lint-test-function.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Test with pytest
         working-directory: stats-functions/${{ inputs.function_name }}
         run: |
-          pytest
+          pytest --cov=${{ inputs.function_name }} --cov-fail-under=80 --cov-report html
