--- a/.github/workflows/lint-test-function.yml
+++ b/.github/workflows/lint-test-function.yml
@@ -16,7 +16,7 @@ on:
 
 permissions:
   contents: read
-  pages: write
+  pull-requests: write
   id-token: write
 
 jobs:
@@ -49,21 +49,8 @@ jobs:
         run: |
           pytest tests/ --cov=src/ --cov-report=html --cov-fail-under=80
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
       - name: Upload coverage report
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          path: stats-functions/${{ inputs.function_name }}/htmlcov
-
-  deploy:
-    needs: lint-test
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          name: coverage-report-${{ inputs.function_name }}
+          path: stats-functions/${{ inputs.function_name }}/htmlcov/
