--- a/.github/workflows/lint-test-function.yml
+++ b/.github/workflows/lint-test-function.yml
@@ -13,9 +13,11 @@ on:
         type: string
         description: Name of the function directory (e.g. aggregate_hourly_downloads)
         required: true
-        
+
 permissions:
   contents: read
+  pull-requests: write
+  id-token: write
 
 jobs:
   lint-test:
@@ -28,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
@@ -45,4 +47,11 @@ jobs:
       - name: Test with pytest
         working-directory: stats-functions/${{ inputs.function_name }}
         run: |
-          pytest
+          pytest tests/ --cov=src/ --cov-report=html --cov-fail-under=80
+
+      - name: Upload coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report-${{ inputs.function_name }}
+          path: stats-functions/${{ inputs.function_name }}/htmlcov/
